--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,11 @@
     "type": "library",
     "description": "Coercive Security Session",
     "homepage": "http://coercive.fr",
-    "license": "GNU",
+    "license": "MIT",
+    "licenses": [{
+      "type": "MIT",
+      "url": "https://github.com/Coercive/Session/blob/master/LICENSE.txt"
+    }],
     "authors": [
         {
             "name": "Anthony Moral",
