--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,6 @@
     "description": "Coercive Security Session",
     "homepage": "http://coercive.fr",
     "license": "MIT",
-    "licenses": [{
-      "type": "MIT",
-      "url": "https://github.com/Coercive/Session/blob/master/LICENSE.txt"
-    }],
     "authors": [
         {
             "name": "Anthony Moral",
@@ -17,7 +13,8 @@
     ],
     "require": {
         "php": ">=7.0",
-        "ext-openssl": "*"
+        "ext-openssl": "*",
+        "ext-json": "*"
     },
     "autoload": {
         "psr-4": { "Coercive\\Security\\Session\\": "dist/" }
