--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "php": ">=7.0",
         "ext-openssl": "*",
         "coercive/crypt": "^1",
+        "coercive/cookie": "^1.1.3",
         "paragonie/sodium_compat": "^1.14"
     },
     "autoload": {
